# VanishingPoint

./: .gitignore  README.md
IndoorNavigator/: IndoorNavigator.sln
IndoorNavigator/VanishingPoint/: VanishingPoint.vcxproj  VanishingPoint.vcxproj.filters  main.cpp  main_func.cpp  main_func.h
IndoorNavigator/VanishingPoint/x64/Debug/: vc120.idb
IndoorNavigator/VanishingPoint/x64/Debug/VanishingPoint.tlog/: CL.read.1.tlog  CL.write.1.tlog  VanishingPoint.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
IndoorNavigator/x64/Debug/: VanishingPoint.ilk
linux_version/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  set_opencv_path.sh
linux_version/app/: CMakeLists.txt  common_test.cpp  detector_test.cpp  evaluate.cpp  main.cpp  tagging.cpp  vanish_pt.cpp
linux_version/base/: base.cpp  base.hpp  core.hpp
linux_version/design/: Vanish_Line_Detector
linux_version/feature/: CMakeLists.txt  range_hough.cpp  range_hough.hpp
linux_version/param/: .range_hough.txt.swp  common.txt  debug_detector.txt  detector.txt  evaluate.txt  range_hough.txt  tagging.txt
linux_version/records/: detector.xls
linux_version/src/: main.cpp  main_func.cpp  main_func.h
linux_version/vanish/: CMakeLists.txt  detector.cpp  detector.hpp  vanish.cpp  vanish.hpp
