CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_COMPILER clang++-3.9)
if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "No build type selected, default to Debug")
  set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Build type (default Debug)" FORCE)
endif()
set (CMAKE_CXX_STANDARD 11)
find_package(OpenCV)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
PROJECT(s5)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
#link_directories(/home/hzh/Downloads/leptonica-1.73/build/src)
#file(GLOB SRC "./src/*.cpp")
#add_executable(vanish_pt ${SRC})
#target_link_libraries(vanish_pt ${OpenCV_LIBS} lept)
add_subdirectory(app)
add_subdirectory(vanish)
add_subdirectory(config)
add_subdirectory(feature)
add_subdirectory(base)
